--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -203,7 +203,7 @@ jobs:
         with:
           owner: swift-nav
           repo: swift-toolbox-ci
-          ref: main
+          ref: adrian/notary-mac
           workflow_file_name: distribute.yml
           client_payload: '{
             "branch": "${{ github.ref_name }}", 
