--- a/console_backend/Cargo.toml
+++ b/console_backend/Cargo.toml
@@ -28,7 +28,7 @@ serde_yaml = "0.9.14"
 anyhow = { version = "1", features = ["backtrace"] }
 clap = { version = "4.0.29", features = ["derive"] }
 indexmap = { version = "1.9.2", features = ["serde"] }
-chrono = { version = "0.4.23", features = ["serde"] }
+chrono = { version = "0.4.23", features = ["serde", "clock", "std"], default-features = false}
 serde = { version = "1.0.148", features = ["derive"] }
 sbp = { version = "4.9.1", features = ["json", "link", "swiftnav"] }
 mimalloc = { version = "0.1", default-features = false }
@@ -62,6 +62,7 @@ ndarray = "0.15.6"
 criterion = "0.4.0"
 sysinfo = "0.26.7"
 tempfile = "3.3.0"
+rstest = "0.16.0"
 
 [build-dependencies]
 capnpc = "0.15.0"
