--- a/console_backend/Cargo.toml
+++ b/console_backend/Cargo.toml
@@ -31,7 +31,7 @@ indexmap = { version = "1.9.2", features = ["serde"] }
 chrono = { version = "0.4.23", features = [
   "serde",
   "clock",
-  "std"
+  "std",
 ], default-features = false}
 serde = { version = "1.0.148", features = ["derive"] }
 sbp = { version = "4.9.1", features = ["json", "link", "swiftnav"] }
