--- a/Makefile.toml
+++ b/Makefile.toml
@@ -1044,9 +1044,8 @@ dependencies = [
 ]
 run_task = "check-git-diff"
 
-# TODO Fix qmllint warnings then add qml-lint back to lint task.[CPP-798]
 [tasks.lint]
-dependencies = ["python-lint", "rust-lint", "format-check"]
+dependencies = ["python-lint", "rust-lint", "format-check", "qml-lint"]
 
 [tasks.types]
 dependencies = ["python-type-check", "rust-type-check"]
