revert generate resources in  setupbuilder

--- a/Makefile.toml
+++ b/Makefile.toml
@@ -406,6 +406,7 @@ cp . ../../../py39
 cd ../../../
 exec --fail-on-error ${PYTHON} ./get-pip.py
 exec --fail-on-error ${PYTHON} -m pip install wheel flit . ".[test]" ".[ssh-tunnel]"
+cm_run_task generate-resources
 
 # If pyside-setup exists, then assume user wants to build and install pyside6
 if is_path_exists "${WORKSPACE}/pyside-setup/setup.py"
