--- a/Makefile.toml
+++ b/Makefile.toml
@@ -1,40 +1,78 @@
 env_scripts = [
   '''
 #!@duckscript
-# set os specific env vars
 os = os_family
+
+qtpaths_path = which qtpaths
+if is_empty "${qtpaths_path}"
+	echo "qtpaths not in PATH"
+    qtpaths_path = set "/__/__"
+end
+
+qtdir = get_env QTDIR
+if is_empty "${qtdir}"
+  qtdir = set "/__/__"
+end
+
+if not is_path_exists "${qtpaths_path}"
+  if is_path_exists "${qtdir}"
+    echo "QTDIR ${qtdir} exists, checking if qtpaths is present"
+    qtpaths_path = set ${qtdir}/bin/qtpaths
+    if not is_path_exists "${qtpaths_path}"
+      qtpaths_path = set ${qtdir}/qtpaths.exe
+      if not is_path_exists "${qtpaths_path}"
+        qtpaths_path = set ""
+      end
+    end
+  end
+end
+set_env QTPATHS_PATH "${qtpaths_path}"
+num_processes = cpu_count
+num_processes = calc ${num_processes} + 1
+set_env NUM_PROCESSES "${num_processes}"
+
+# set os specific env vars
 set_env OS "${os}"
 if eq ${os} windows
   set_env STANDALONE_PY_URL "${PY_BASE_URL}/cpython-3.9.7-x86_64-pc-windows-msvc-shared-pgo-20211017T1616.tar.zst"
   set_env PYTHON "${WORKSPACE}\\py39\\python.exe"
   set_env DIST_PYTHON "${WORKSPACE}\\py39-dist\\python"
-  set_env PYSIDE2_RCC "${WORKSPACE}\\py39\\Lib\\site-packages\\PySide6\\rcc.exe"
+  set_env DIST_PYSIDE6_RCC "${WORKSPACE}\\py39-dist\\Lib\\site-packages\\PySide6\\rcc.exe"
+  set_env PYSIDE6_RCC "${WORKSPACE}\\py39\\Lib\\site-packages\\PySide6\\rcc.exe"
   set_env BACKEND_WHEEL console_backend-0.1.0-cp39-cp39-win_amd64.whl
   set_env BUILD_TRIPLET "x86_64-pc-windows-msvc"
   set_env PYO3_CONFIG_FILE "${WORKSPACE}\\standalone-py\\pyo3_config.txt"
   set_env CONSOLE_PYO3_CONFIG_FILE "${WORKSPACE}\\standalone-py\\pyo3_config.txt"
+  set_env PYSIDE_WHEEL fill_me_in.whl
+  set_env SHIBOKEN_WHEEL fill_me_in.whl
 elseif eq ${os} linux
   set_env STANDALONE_PY_URL "${SWFT_PY_BASE_URL}/cpython-3.9.10-x86_64-unknown-linux-gnu-pgo+lto-20220203T2103.tar.zst"
   set_env PYTHON "${WORKSPACE}/py39/bin/python3"
   set_env DIST_PYTHON "${WORKSPACE}/py39-dist/bin/python3"
-  set_env PYSIDE2_RCC "${WORKSPACE}/py39/bin/pyside6-rcc"
+  set_env DIST_PYSIDE6_RCC "${WORKSPACE}/py39-dist/bin/pyside6-rcc"
+  set_env PYSIDE6_RCC "${WORKSPACE}/py39/bin/pyside6-rcc"
   set_env BACKEND_WHEEL console_backend-0.1.0-cp39-cp39-linux_x86_64.whl
   set_env PYO3_CONFIG_FILE "${WORKSPACE}/standalone-py/pyo3_config.txt"
   set_env CONSOLE_PYO3_CONFIG_FILE "${WORKSPACE}/standalone-py/pyo3_config_console.txt"
   output = exec --fail-on-error gcc -dumpmachine
   triplet = trim ${output.stdout}
   set_env BUILD_TRIPLET ${triplet}
+  set_env PYSIDE_WHEEL PySide6-\${qt_version}-\${qt_version}-cp39-cp39-linux_x86_64.whl
+  set_env SHIBOKEN_WHEEL shiboken6-\${qt_version}-\${qt_version}-cp39-cp39-linux_x86_64.whl
 else
   set_env STANDALONE_PY_URL "${PY_BASE_URL}/cpython-3.9.7-x86_64-apple-darwin-pgo+lto-20211017T1616.tar.zst"
   set_env PYTHON "${WORKSPACE}/py39/bin/python3"
   set_env DIST_PYTHON "${WORKSPACE}/py39-dist/bin/python3"
-  set_env PYSIDE2_RCC "${WORKSPACE}/py39/bin/pyside6-rcc"
+  set_env DIST_PYSIDE6_RCC "${WORKSPACE}/py39-dist/bin/pyside6-rcc"
+  set_env PYSIDE6_RCC "${WORKSPACE}/py39/bin/pyside6-rcc"
   set_env BACKEND_WHEEL console_backend-0.1.0-cp39-cp39-macosx_10_15_x86_64.whl
   set_env PYO3_CONFIG_FILE "${WORKSPACE}/standalone-py/pyo3_config.txt"
   set_env CONSOLE_PYO3_CONFIG_FILE "${WORKSPACE}/standalone-py/pyo3_config_console.txt"
   output = exec --fail-on-error gcc -dumpmachine
   triplet = trim ${output.stdout}
   set_env BUILD_TRIPLET ${triplet}
+  set_env PYSIDE_WHEEL PySide6-\${qt_version}-\${qt_version}-cp39-cp39-macosx_12_x86_64.whl
+  set_env SHIBOKEN_WHEEL shiboken6-\${qt_version}-\${qt_version}-cp39-cp39-macosx_12_x86_64.whl
 end
 ''',
 ]
@@ -52,6 +90,7 @@ PY_BASE_URL = "https://github.com/indygreg/python-build-standalone/releases/down
 SWFT_PY_BASE_URL = "https://github.com/swift-nav/python-build-standalone/releases/download/20220205%2Bswift"
 MACOSX_DEPLOYMENT_TARGET = "10.15"
 APP_NAME = "swift-console"
+QT_VERSION = "6.4.1"                                                                                         # Also needs to be updated in .github/workflows/main.yml
 
 [tasks.init]
 
@@ -124,11 +163,22 @@ if not is_path_exists py39
 end
 '''
 
+[tasks.dist-generate-resources]
+dependencies = ["build-splash-version"]
+command = "${DIST_PYSIDE6_RCC}"
+args = [
+  "resources/console_resources.qrc",
+  "-o",
+  "swiftnav_console/console_resources.py",
+  "-g",
+  "python",
+]
+
 [tasks.generate-resources]
-dependencies = ["check-python-exists", "build-splash-version"]
+dependencies = ["build-splash-version"]
 script_runner = "@duckscript"
 script = '''
-  exec --fail-on-error "${PYSIDE2_RCC}" "resources/console_resources.qrc" "-o" "swiftnav_console/console_resources.py" "-g" "python"
+  exec --fail-on-error "${PYSIDE6_RCC}" "resources/console_resources.qrc" "-o" "swiftnav_console/console_resources.py" "-g" "python"
 '''
 
 [tasks.check-capnp]
@@ -185,51 +235,38 @@ args = [
 ]
 
 [tasks.qml-run]
-dependencies = ["generate-resources"]
+dependencies = ["check-python-exists", "generate-resources"]
 run_task = "start-console"
 
-[tasks.run]
+[tasks.prepare-run]
 dependencies = [
+  "check-python-exists",
   "copy-capnp",
   "generate-resources",
   "remove-egg-dist",
   "store-version",
   "install-backend",
 ]
+
+[tasks.run]
+dependencies = ["prepare-run"]
 run_task = "start-console"
 
 [tasks.gdb-run]
-dependencies = [
-  "copy-capnp",
-  "generate-resources",
-  "remove-egg-dist",
-  "store-version",
-  "install-backend",
-]
+dependencies = ["prepare-run"]
 run_task = "start-console-gdb"
 
 [tasks.callgrind-run]
-dependencies = [
-  "copy-capnp",
-  "generate-resources",
-  "remove-egg-dist",
-  "store-version",
-  "install-backend",
-]
+dependencies = ["prepare-run"]
 run_task = "start-console-callgrind"
 
 [tasks.cprofile-run]
-dependencies = [
-  "copy-capnp",
-  "generate-resources",
-  "remove-egg-dist",
-  "store-version",
-  "install-backend",
-]
+dependencies = ["prepare-run"]
 run_task = "start-console-cprofile"
 
 [tasks.prod-run]
 dependencies = [
+  "check-python-exists",
   "copy-capnp",
   "generate-resources",
   "remove-egg-dist",
@@ -271,14 +308,30 @@ args = [
   "./console_backend",
 ]
 
+[tasks.dist-install-pip-flit]
+command = "${DIST_PYTHON}"
+args = ["-m", "pip", "install", "flit"]
+
 [tasks.build-frontend-wheel]
-command = "${PYTHON}"
+dependencies = ["dist-install-pip-flit"]
+command = "${DIST_PYTHON}"
 args = ["-m", "flit", "build", "--no-setup-py"]
 
+[tasks.dist-install-pip-setuptools-rust]
+command = "${DIST_PYTHON}"
+args = ["-m", "pip", "install", "setuptools_rust"]
+
 [tasks.build-backend-wheel]
+dependencies = ["dist-install-pip-setuptools-rust"]
 cwd = "console_backend"
-command = "${PYTHON}"
+command = "${DIST_PYTHON}"
 args = ["setup.py", "-vv", "bdist_wheel"]
+
+[tasks.clean-backend]
+dependencies = ["dist-install-pip-setuptools-rust"]
+cwd = "console_backend"
+command = "${DIST_PYTHON}"
+args = ["setup.py", "-vv", "clean"]
 
 [tasks.get-get-pip]
 script_runner = "@duckscript"
@@ -325,6 +378,21 @@ exec --fail-on-error zstd -f -d py39.tar.zst
 exec --fail-on-error tar -xf py39.tar
 '''
 
+[tasks.get-qt-version]
+script_runner = "@duckscript"
+script = '''
+  qtpaths_path_exists = is_path_exists "${QTPATHS_PATH}"
+  assert ${qtpaths_path_exists} "Couldn't find qtpaths executable.\nPlease install the desired Qt version from qt.io, and make sure that the bin directory is in the path.\nFor more information see README.debug.md."
+  qtpaths_output = exec --fail-on-error ${QTPATHS_PATH} -query QT_VERSION
+  qt_version = trim ${qtpaths_output.stdout}
+  set_env QT_VERSION ${qt_version}
+
+  # Now that we know the Qt version, expand PYSIDE_WHEEL and SHIBOKEN_WHEEL env
+  # vars to insert the qt version.
+  pyside_wheel = eval set_env PYSIDE_WHEEL ${PYSIDE_WHEEL}
+  shiboken_wheel = eval set_env SHIBOKEN_WHEEL ${SHIBOKEN_WHEEL}
+'''
+
 [tasks.setup-builder]
 dependencies = ["get-standalone-py"]
 script_runner = "@duckscript"
@@ -338,6 +406,14 @@ cp . ../../../py39
 cd ../../../
 exec --fail-on-error ${PYTHON} ./get-pip.py
 exec --fail-on-error ${PYTHON} -m pip install wheel flit . ".[test]" ".[ssh-tunnel]"
+
+# If pyside-setup exists, then assume user wants to build and install pyside6
+if is_path_exists "${WORKSPACE}/pyside-setup/setup.py"
+  cm_run_task get-qt-version
+  cm_run_task build-install-pyside
+else
+  exec --fail-on-error ${PYTHON} -m pip install PySide6==${QT_VERSION}
+end
 cm_run_task generate-resources
 '''
 
@@ -354,6 +430,14 @@ cd standalone-py/python/install/
 cp . ../../../py39-dist
 cd ../../..
 exec --fail-on-error ${DIST_PYTHON} ./get-pip.py
+
+# If pyside-setup exists, then assume user wants to build and install pyside6
+if is_path_exists "${WORKSPACE}/pyside-setup/setup.py"
+  # This will install to both dist and non-dist python
+  cm_run_task build-dist-install-pyside
+else
+  exec --fail-on-error ${DIST_PYTHON} -m pip install PySide6==${QT_VERSION}
+end
 '''
 
 [tasks.install-imagemagick]
@@ -482,17 +566,75 @@ script = '''
 touch ./py39-dist/.frozen
 '''
 
-[tasks.build-dist]
-dependencies = ["prep-dist"]
-run_task = [
-  { name = [
-    "build-dist-install-frontend-wheel",
-    "build-dist-install-backend-wheel",
-    "build-dist-install-console",
-    "build-dist-copy-resources",
-    "build-dist-freeze",
-  ] },
+[tasks.pre-build-dist]
+dependencies = [
+  "setup-builder",
+  "prep-dist",
+  "build-dist-copy-resources",
+  "build-dist-freeze",
 ]
+
+[tasks.prep-debug-pyside]
+condition = { files_not_exist = ["${WORKSPACE}/pyside-setup/setup.py"] }
+dependencies = ["get-qt-version"]
+script_runner = "@duckscript"
+script = '''
+  qt_version = get_env QT_VERSION
+  exec --fail-on-error git clone -b v${qt_version} http://code.qt.io/pyside/pyside-setup.git
+  exec --fail-on-error git -C pyside-setup am ../utils/pyside-setup-6.3-includepy-fallback.patch
+'''
+
+[tasks.build-pyside]
+condition = { files_not_exist = [
+  "${WORKSPACE}/pyside-setup/dist/${PYSIDE_WHEEL}",
+] }
+dependencies = ["prep-debug-pyside"]
+cwd = "pyside-setup"
+script_runner = "@duckscript"
+script = '''
+# Note: To make build-install-pyside work on Windows, you need to run from a powershell or cmd shell
+# that is a VS2019 or other visual studio command line (vcvars*.bat needs to be sourced).
+# To set up a powershell with the Visual Studio environment, run these two commands:
+# Import-Module "C:\Program Files (x86)\Microsoft Visual Studio\2019\Professional\Common7\Tools\Microsoft.VisualStudio.DevShell.dll"
+# Enter-VsDevShell -VsInstanceId fdbeecbc -SkipAutomaticLocation -DevCmdArguments '-arch=x64 -no_logo'
+qtpaths_path = get_env QTPATHS_PATH
+qt_version = get_env QT_VERSION
+exec --fail-on-error ${PYTHON} -m pip install -r requirements.txt
+exec --fail-on-error ${PYTHON} setup.py bdist_wheel --debug --qt ${qt_version} --qtpaths=${qtpaths_path} --parallel=${NUM_PROCESSES} --no-examples --skip-docs --module-subset Core,Network,Gui,Qml,OpenGL,Quick,QuickControls2,Widgets,Charts
+'''
+
+[tasks.build-dist-install-pyside]
+dependencies = ["build-pyside"]
+script_runner = "@duckscript"
+script = '''
+exec --fail-on-error ${DIST_PYTHON} -m pip install setuptools wheel packaging
+exec --fail-on-error ${DIST_PYTHON} -m pip install --force-reinstall ${WORKSPACE}/pyside-setup/dist/${SHIBOKEN_WHEEL} ${WORKSPACE}/pyside-setup/dist/${PYSIDE_WHEEL}
+'''
+
+[tasks.build-install-pyside]
+dependencies = ["build-pyside"]
+script_runner = "@duckscript"
+script = '''
+exec --fail-on-error ${PYTHON} -m pip install --force-reinstall ${WORKSPACE}/pyside-setup/dist/${SHIBOKEN_WHEEL} ${WORKSPACE}/pyside-setup/dist/${PYSIDE_WHEEL}
+'''
+
+[tasks.build-dist]
+script_runner = "@duckscript"
+script = '''
+if is_path_exists ${DIST_PYTHON}
+  output = exec --fail-on-error ${DIST_PYTHON} -m pip freeze
+  out = set ${output.stdout}
+  if not contains "${out}" "PySide6=="
+    cm_run_task pre-build-dist
+  end
+else
+  cm_run_task pre-build-dist
+end
+cm_run_task dist-generate-resources
+cm_run_task build-dist-install-frontend-wheel
+cm_run_task build-dist-install-backend-wheel
+cm_run_task build-dist-install-console
+'''
 
 [tasks.purge-dist]
 env = { PYTHONDONTWRITEBYTECODE = "1" }
