--- a/Makefile.toml
+++ b/Makefile.toml
@@ -46,7 +46,7 @@ if eq ${os} windows
   set_env PYSIDE_WHEEL fill_me_in.whl
   set_env SHIBOKEN_WHEEL fill_me_in.whl
 elseif eq ${os} linux
-  set_env STANDALONE_PY_URL "${SWFT_PY_BASE_URL}/cpython-3.10.9+20230116-x86_64-unknown-linux-gnu-pgo+lto-full.tar.zst"
+  set_env STANDALONE_PY_URL "${PY_BASE_URL}/cpython-3.10.9+20230116-x86_64-unknown-linux-gnu-pgo+lto-full.tar.zst"
   set_env PYTHON "${WORKSPACE}/py39/bin/python3"
   set_env DIST_PYTHON "${WORKSPACE}/py39-dist/bin/python3"
   set_env DIST_PYSIDE6_RCC "${WORKSPACE}/py39-dist/bin/pyside6-rcc"
@@ -87,7 +87,6 @@ skip_crate_env_info = true
 [env]
 WORKSPACE = "${CARGO_MAKE_WORKSPACE_WORKING_DIRECTORY}"
 PY_BASE_URL = "https://github.com/indygreg/python-build-standalone/releases/download/20230116"
-SWFT_PY_BASE_URL = "https://github.com/swift-nav/python-build-standalone/releases/download/20220205%2Bswift"
 MACOSX_DEPLOYMENT_TARGET = "10.15"
 APP_NAME = "swift-console"
 QT_VERSION = "6.4.1"                                                                                         # Also needs to be updated in .github/workflows/main.yml
