--- a/Makefile.toml
+++ b/Makefile.toml
@@ -538,6 +538,10 @@ cp target/release/${APP_NAME}.d py39-dist/${APP_NAME}.d
 if is_path_exists target/release/swift_console.pdb
   cp target/release/swift_console.pdb py39-dist/swift_console.pdb
 end
+ls target
+echo ==
+ls target/release
+echo ==
 cp target/x86_64-pc-windows-msvc/release/console_backend.pdb py39-dist/Lib/site-packages/console_backend/console_backend.pdb
 '''
 
