--- a/Makefile.toml
+++ b/Makefile.toml
@@ -242,10 +242,11 @@ run_task = "start-console"
 dependencies = [
   "check-python-exists",
   "copy-capnp",
+  "map-js-token",
   "generate-resources",
   "remove-egg-dist",
   "store-version",
-  "install-backend",
+  "install-backend"
 ]
 
 [tasks.run]
@@ -1355,3 +1356,11 @@ run_task = "newline-terminator"
 [tasks.check-git-diff]
 command = "git"
 args = ["diff", "--exit-code"]
+
+[tasks.map-js-token]
+script_runner = "@duckscript"
+script = '''
+file = readfile resources/web/map/js/trajectory_raw.js
+file_modified = replace ${file} "%ACCESS_TOKEN%" ${MAPBOX_TOKEN}
+writefile "resources/web/map/js/trajectory.js" ${file_modified}
+'''
