--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -191,7 +191,7 @@ jobs:
         with:
           owner: swift-nav
           repo: swift-toolbox-ci
-          ref: adrian/prev_release
+          ref: swift-toolbox-v4.0.0-branch
           workflow_file_name: distribute.yml
           client_payload: '{
             "branch": "${{ github.head_ref || github.ref_name }}",
