--- a/.cargo/config
+++ b/.cargo/config
@@ -11,7 +11,18 @@ rustflags = [
 ]
 
 [target.x86_64-pc-windows-msvc]
-rustflags = ["-Ctarget-feature=+crt-static", "-Zunstable-options"]
+rustflags = [
+  "-Ctarget-feature=+crt-static",
+  "-Zunstable-options",
+  "-C", "link-arg=-undefined",
+  "-C", "link-arg=dynamic_lookup"
+]
+
+[target.x86_64-unknown-linux-gnu]
+rustflags = [
+  "-C", "link-arg=-undefined",
+  "-C", "link-arg=dynamic_lookup"
+]
 
 [alias]
 swift-files = "run --bin swift-files --no-default-features --features env_logger,indicatif --"
