--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,6 +33,7 @@ jobs:
         - ubuntu-20.04
         - macos-11
         - windows-2019
+      fail-fast: false
 
     runs-on: ${{ matrix.os }}
     env:
