--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
 "console_backend/tests/data/*" filter=lfs diff=lfs merge=lfs -text
 "pyside-wheels/*.whl" filter=lfs diff=lfs merge=lfs -text
 installers/Windows/NSIS/*.zip filter=lfs diff=lfs merge=lfs -text
+"binaries/**" filter=lfs diff=lfs merge=lfs -text
