--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -170,6 +170,7 @@ jobs:
         with:
           version: '6.4.3'
           setup-python: false
+          aqtversion: '==3.1.6'
 
       - name: Run Checks
         run: cargo make check-all
