--- a/console_backend/Cargo.toml
+++ b/console_backend/Cargo.toml
@@ -20,7 +20,7 @@ directories = "5"
 crossbeam = "0.8"
 rand = "0.8.5"
 parking_lot = "0.12.1"
-sbp-settings = "0.6.16"
+sbp-settings = {git = "https://github.com/swift-nav/libsettings-rs.git", branch = "adrian/update-baudrate-enum"}
 rust-ini = "0.19.0"
 regex = "1.9.4"
 serde_json = "1"
@@ -34,7 +34,7 @@ chrono = { version = "0.4.28", features = [
   "std",
 ], default-features = false }
 serde = { version = "1.0.188", features = ["derive"] }
-sbp = { version = "4.17.0", features = ["json", "link", "swiftnav"] }
+sbp = { version = "5", features = ["json", "link", "swiftnav"] }
 mimalloc = { version = "0.1", default-features = false }
 serialport = { git = "https://github.com/swift-nav/serialport-rs.git", default-features = false }
 
