--- a/console_backend/Cargo.toml
+++ b/console_backend/Cargo.toml
@@ -20,7 +20,7 @@ directories = "5"
 crossbeam = "0.8"
 rand = "0.8.5"
 parking_lot = "0.12.1"
-sbp-settings = {git = "https://github.com/swift-nav/libsettings-rs.git", branch = "adrian/update-baudrate-enum"}
+sbp-settings = "0.6.18"
 rust-ini = "0.19.0"
 regex = "1.9.4"
 serde_json = "1"
