--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ include = ["swiftnav_console/console_resources.py"]
 
 [tool.black]
 line-length = 120
+exclude = "standalone-py/"
 
 [tool.pylint.MASTER]
 jobs = 0
